--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -9,5 +9,9 @@
     { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "condition": "poor" },
     { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
     { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
+  ],
+
+  "defaultAppointments": [
+    { "date": "5/20", "time": "10:00PM", "location": "Queen's Punchbowl", "vaccine": "Moderna", "owner": "john@foo.com" }
   ]
 }
