--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,9 @@
     "@babel/runtime": "^7.13.7",
     "classnames": "^2.2.6",
     "core-js": "^3.9.0",
+    "google-map-react": "^2.1.9",
     "graphql": "^14.5.8",
+    "lodash": "^4.17.21",
     "meteor-node-stubs": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
