--- a/app/.deploy/settings.sample.json
+++ b/app/.deploy/settings.sample.json
@@ -11,6 +11,11 @@
     { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
   ],
 
+  "defaultAppointments": [
+    { "date": "5/20", "time": "10:00PM", "location": "Queen's Punchbowl", "vaccine": "Moderna", "owner": "john@foo.com" },
+    { "date": "5/21", "time": "9:00AM", "location": "Kapiolani Medical Center", "vaccine": "Pfizer", "owner": "john@foo.com" }
+  ],
+
   "monti": {
     "appId": "changeme",
     "appSecret": "changeme"
